old k8s/api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    tier: backend
spec:
  containers:
    - name: api-container
      image: 942170411215.dkr.ecr.us-east-2.amazonaws.com/go-chat-api:latest
  imagePullSecrets:
    - name: awsecr-cred
