old k8s/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    tier: frontend
spec:
  containers:
    - name: app-container
      image: 942170411215.dkr.ecr.us-east-2.amazonaws.com/go-chat-app:latest
  imagePullSecrets:
    - name: awsecr-cred
