old k8s/api-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-port
spec:
  type: NodePort
  ports:
    - port: 3051
      targetPort: 80
      nodePort: 31516
  selector:
    tier: backend
