old k8s/app-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 80
      nodePort: 31515
  selector:
    tier: frontend
