old k8s/api-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*) # removing /api/ 
            backend:
              serviceName: api-1586991256
              servicePort: 3051
