old k8s/app-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: app-1586991260
              servicePort: 3050
